--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sales Dashboard</title>
+  <title>Supply Chain SQL Analyzer</title>
 </head>
 <body>
-  <h1>Sales Dashboard</h1>
-  <p>An interactive dashboard for supply chain and demand planning KPIs.</p>
+  <h1>Supply Chain SQL Analyzer</h1>
+  <p>This project demonstrates SQL-based analysis for supply chain optimization.</p>
   <p>Status: 🚧 Work in Progress 🚧</p>
 </body>
 </html>
